Ajustes warnings